--- a/scss/settings.scss
+++ b/scss/settings.scss
@@ -19,9 +19,9 @@
         margin-top: 1rem; 
         @include m.df(space-between);
         .btn-submit{
-            @include m.button(1rem,v.$light,v.$primary);
+            @include m.button(1rem,v.$light,v.$gdbg);
             &:hover{
-                opacity: .7;
+                background: v.$gdbg;
             }
         }
         .go-to-stripe{
