--- a/public/assets/css/course.css
+++ b/public/assets/css/course.css
@@ -252,7 +252,7 @@
 .add_module_bttn {
   padding: 10px 15px;
   border-radius: 1.6rem;
-  background: #4c60ff;
+  background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
   color: #ffffff;
   display: block;
   text-align: center;
@@ -261,7 +261,8 @@
   margin-top: 0.3rem;
 }
 .add_module_bttn:hover {
-  background: #2d3958;
+  background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
+  color: #ffffff;
 }
 
 .add_lesson_bttn {
@@ -293,13 +294,13 @@
   font-weight: 500;
   color: #ffffff;
   line-height: 140%;
-  background: #4c60ff;
+  background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
   display: inline-block;
   padding: 0.85rem 1.5rem;
   border-radius: 3rem;
 }
 .content-txt-box .d-flex a:hover {
-  background: #2d3958;
+  background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
 }
 .content-txt-box .d-flex a.min_width {
   min-width: 10rem;
@@ -521,6 +522,34 @@
 
 .course-box-wrap {
   overflow-x: hidden !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.course-dessc-txt h1, .course-dessc-txt h2 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: #2d3958;
+  line-height: 140%;
+}
+.course-dessc-txt h3, .course-dessc-txt h4 {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #2d3958;
+  line-height: 140%;
+}
+.course-dessc-txt h5, .course-dessc-txt h6 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #2d3958;
+  line-height: 140%;
+}
+.course-dessc-txt p {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #8C8FAE;
+  line-height: 140%;
 }
 
 @media (min-width: 320px) and (max-width: 574px) {
