--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -16,7 +16,6 @@
   align-items: center;
   justify-content: space-between;
 }
-
 .header-logo-wrap img.logo-width {
   width: 10rem;
 }
@@ -27,7 +26,6 @@
   justify-content: flex-start;
   margin-left: 2rem;
 }
-
 .header-search-wrap input {
   border: none;
   background-color: transparent;
@@ -46,17 +44,14 @@
   align-items: center;
   justify-content: flex-end;
 }
-
 .header-start-menu-wrapper .header-navbar-wrap {
   text-align: end;
 }
-
 .header-start-menu-wrapper .header-navbar-wrap .head-navbar {
   display: flex;
   align-items: center;
   justify-content: flex-start;
 }
-
 .header-start-menu-wrapper .header-navbar-wrap .head-navbar .link-item .link-click {
   font-size: 1rem;
   font-weight: 400;
@@ -65,13 +60,11 @@
   margin-right: 1.6rem;
   color: #ffffff;
 }
-
 .header-start-menu-wrapper .header-right-icon-wrap .icon-nav {
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
-
 .header-start-menu-wrapper .header-right-icon-wrap .icon-nav .dark-mode-bttn {
   display: flex;
   align-items: center;
@@ -83,23 +76,19 @@
   cursor: pointer;
   transition: all linear 0.3;
 }
-
 .header-start-menu-wrapper .header-right-icon-wrap .icon-nav .dark-mode-bttn .fa-solid {
   color: #8C8FAE;
   margin-right: 0.4rem;
 }
-
 .header-start-menu-wrapper .header-right-icon-wrap .icon-nav .dark-mode-bttn span {
   font-size: 0.8rem;
   font-weight: 600;
   color: #000000;
   line-height: 140%;
 }
-
 .header-start-menu-wrapper .header-right-icon-wrap .icon-nav .dark-mode-bttn:hover {
   background-color: #000000;
 }
-
 .header-start-menu-wrapper .header-right-icon-wrap .icon-nav .dark-mode-bttn:hover span {
   color: #ffffff;
 }
@@ -108,7 +97,6 @@
   border-radius: 0.2rem;
   padding: 0.2rem 0;
 }
-
 .settings-dropdown li a {
   display: block;
   font-size: 0.9rem;
@@ -117,40 +105,34 @@
   line-height: 140%;
   padding: 0.4rem 0.6rem;
 }
-
 .settings-dropdown li a i {
   margin-right: 0.4rem;
   color: #2d3958;
 }
-
 .settings-dropdown li a:hover {
   background: rgba(235, 240, 249, 0.6);
 }
 
-.header-right-icon-wrap .dropdown a i.fa-cog {
+.header-right-icon-wrap .dropdown a i.fa-volleyball {
   font-size: 1.5rem;
   color: #ffffff;
 }
 
 .header-search-wrap input::-moz-placeholder {
   color: #ffffff;
-  opacity: 1;
-  /* Firefox */
+  opacity: 1; /* Firefox */
 }
 
 .header-search-wrap input::placeholder {
   color: #ffffff;
-  opacity: 1;
-  /* Firefox */
+  opacity: 1; /* Firefox */
 }
 
-.header-search-wrap input:-ms-input-placeholder {
-  /* Internet Explorer 10-11 */
+.header-search-wrap input:-ms-input-placeholder { /* Internet Explorer 10-11 */
   color: #ffffff;
 }
 
-.header-search-wrap input::-ms-input-placeholder {
-  /* Microsoft Edge */
+.header-search-wrap input::-ms-input-placeholder { /* Microsoft Edge */
   color: #ffffff;
 }
 
@@ -158,79 +140,64 @@
   .header-left-part {
     grid-template-columns: 100%;
   }
-
   .header-search-wrap {
     margin: 0;
     display: none;
   }
-
   .header-section {
     padding: 0.4rem 1rem;
   }
-
   .header-section .header-start-menu-wrapper {
     justify-content: space-between;
   }
-
   .header-section .header-start-menu-wrapper .header-navbar-wrap {
     width: 100%;
     display: block;
     justify-content: space-between;
     margin-top: 1rem;
   }
-
   .header-section .header-start-menu-wrapper .header-navbar-wrap .head-navbar {
     justify-content: space-between;
   }
-
   .header-start-menu-wrapper .header-navbar-wrap .head-navbar .link-item .link-click {
     margin-right: 0;
     font-size: 0.86rem;
   }
 }
-
 @media (min-width: 574px) and (max-width: 767px) {
   .header-left-part {
     grid-template-columns: 100%;
   }
-
   .header-search-wrap {
     margin: 0;
     display: none;
   }
-
   .header-start-menu-wrapper {
     justify-content: flex-start;
     margin-top: 1rem;
   }
 }
-
 @media (min-width: 767px) and (max-width: 992px) {
   .header-left-part {
     grid-template-columns: 100%;
   }
-
   .header-search-wrap {
     margin: 0;
     display: none;
   }
-
   .header-start-menu-wrapper {
     justify-content: flex-start;
     margin-top: 1rem;
   }
 }
-
 @media (min-width: 992px) and (max-width: 1199px) {
   .header-left-part {
     grid-template-columns: 70% 30%;
   }
-
   .header-search-wrap {
     margin: 0;
     display: none;
   }
-
   .header-start-menu-wrapper {
     justify-content: flex-start;
   }
