--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -411,3 +411,28 @@
   font-size: 3rem;
   color: #ffffff;
 }
+
+.coursse-list-table .my-course {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #000000;
+  line-height: 140%;
+}
+
+.productss-list-box table.my-tabl tr th {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #8C8FAE;
+  line-height: 140%;
+}
+
+.productss-list-box table.my-tabl tr td a.contact_bttn {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #ffffff;
+  line-height: 140%;
+  background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
+  display: inline-block;
+  padding: 0.85rem 1.5rem;
+  border-radius: 3rem;
+}
