--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -33,6 +33,11 @@
         background: v.$gdbg;
         color: v.$light;
     }
+    .btn-donez{
+        background: v.$fourth;
+        color: v.$light;
+        cursor: auto;
+    }
     .card-footer{
         padding: 1rem 2rem;
         background-color: v.$third;
