--- a/public/assets/css/student.css
+++ b/public/assets/css/student.css
@@ -275,3 +275,9 @@
   -o-object-fit: cover;
      object-fit: cover;
 }
+
+.lesson-wrap li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
