--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -143,14 +143,26 @@
         }
 
         .filter-bttn {
-            margin-top: 1.8rem;
-            margin-left: 2rem;
-            text-align: center;
+            margin-top: 2rem;  
 
+            .btn-reset {
+                @include m.button(1rem, v.$btnbg, transparent);
+                border-radius: 0.4rem;
+                padding: .4rem 1.5rem;
+                border: 1px solid v.$fourth;
+                transition: all linear .2s;
+                display: inline-block;
+                margin: 0 0.7rem;
+
+                &:hover {
+                    background: v.$gdbg;
+                    color: v.$light
+                }
+            }
             .btn-submit {
                 @include m.button(1rem, v.$light, v.$gdbg);
                 border-radius: 0.4rem;
-                padding: .5rem 3rem;
+                padding: .4rem 2rem;
                 transition: all linear .2s;
                 display: inline-block;
 
@@ -273,13 +285,26 @@
 
     .thumbnail {
         margin-bottom: 1rem;
-
+        text-align: center;
         img {
             border-radius: 1rem;
             width: 100%;
             display: block;
             object-fit: cover;
             border: 1px solid v.$third;
+        }
+        span.avatar-ins{
+            width: 7rem;
+            height: 7rem;
+            background: v.$gdbg;
+            border-radius: 50%; 
+            color: v.$light;
+            font-size: 3rem;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto;
         }
     }
 
@@ -399,9 +424,14 @@
     padding: 3rem 0
 }
 
+.feedback-slider{
+    width: 80%;
+    margin: 0 auto;
+}
+
 .student-feeback-box {
     @include m.box(1rem, .6rem, v.$light);
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
 
     .media {
@@ -411,6 +441,7 @@
             width: 5rem;
             height: 5rem;
             border-radius: 50%;
+            object-fit: cover;
             margin-right: 1.5rem;
         }
 
@@ -479,6 +510,172 @@
     text-align: center;
     border-top: 1px solid v.$third;
     padding-top: 1.5rem;
+}
+
+
+.slick-dots {
+	display: flex;
+	justify-content: center;
+	margin: 0;
+	padding: 1rem 0;
+    margin-top: 2rem;
+    transition: all linear .3s;
+	
+	list-style-type: none;
+	
+    li {
+        margin: 0 0.25rem;
+    }
+
+    button {
+        display: block;
+        width: 1rem;
+        height: 1rem;
+        padding: 0; 
+        border: none;
+        border-radius: 100%;
+        background: v.$fourth;
+        transition: all linear .3s;
+        text-indent: -9999px;
+    }
+
+    li.slick-active button {
+        background: v.$gdbg;
+        width: 1.5rem;
+        transition: all linear .3s;
+        border-radius: 7px
+    }
+}
+
+
+#back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    cursor: pointer;
+    background: v.$gdbg;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    font-size: 1.5rem;
+    color: v.$light;
+    @include m.df(center); 
+    text-align: center;
+    transition: opacity 0.2s ease-in-out;
+    i{
+        font-size: 1rem;
+        color: v.$light;
+    }
+}
+
+.course-details-banner-box{
+    padding: 2rem 0;
+    .breadcumb{
+        ul{
+            @include m.df;
+            li{
+                i{
+                    margin: 0 .3rem;
+                    color: v.$fourth;
+                    font-size: .8rem
+                }
+                a{
+                    @include m.para(0.8rem, 400, v.$btnbg); 
+                }
+            }
+        }
+    }
+    .course-title{
+        h1{
+            @include m.para(2rem, 700, v.$btnbg); 
+            margin-bottom: 1rem;
+            margin-top: 0.5rem;
+        }
+        p{
+            @include m.para(0.9rem, 400, v.$fourth); 
+            width: 97%;
+        }
+        .categories{
+            margin: 1rem 0;
+            flex-wrap: wrap;
+            @include m.df;
+            span{
+                margin-right: 0.5rem;
+                margin-bottom: 0.5rem;
+            }
+        }
+        h6{
+            @include m.para(1rem, 600, v.$primary); 
+        }
+        h5{
+            @include m.para(1.2rem, 700, v.$btnbg);
+            margin-top: 0.5rem; 
+        }
+    }
+}
+.course-thumbnail{
+    img{
+        width: 100%;
+        border-radius: 1rem;
+        border: 3px solid v.$third;
+    }
+}
+
+.course-details-box{ 
+    border: 1px solid v.$third;
+    padding: 1rem 2rem;
+    border-radius: .5rem;
+    margin-top: 2rem;
+    background-color: v.$light;
+    h2{
+        @include m.para(2rem, 600, v.$btnbg); 
+        margin-bottom: 1rem;
+    }
+    p{
+        @include m.para(1rem, 400, v.$fourth); 
+        margin-bottom: 1rem;
+    }
+}
+.related-courses{
+    padding: 2rem 0;
+}
+
+.related-head{
+    h3{
+        @include m.para(1.5rem, 600, v.$btnbg); 
+        margin-bottom: 1rem;
+    }
+}
+
+// details bttns enroll
+.enroll-bttns{
+    a{
+        @include m.button(1.2rem, v.$light, v.$gdbg);
+        border: 1px solid v.$light;
+        border-radius: 0.4rem;
+        padding: 1rem 2rem;
+        transition: all linear .2s;
+        display: block;
+        width: 100%;
+        text-align: center;
+
+        &:hover {
+            opacity: .9;
+        }
+    }
+}
+
+.course-modules-lesson-wrap{
+    padding: 2rem 0;
+}
+
+.course-outline-box{
+    padding: 1.5rem;
+    border-radius: 1rem;
+    background-color: v.$light;
+    margin-left: 0!important;
+    padding-left: 4rem;
 }
 
 
@@ -584,6 +781,33 @@
     .ftr-links{
         margin-top: 1.5rem;
     }
+
+    .course-details-banner-box .course-title h1{
+        font-size: 1.6rem;
+    }
+    .course-details-banner-box .course-title p{
+        width: 100%;
+    }
+
+    .ordr_1{
+        order: 1;
+    }
+    .ordr_2{
+        order: 2;
+    }
+    .course-details-box{
+        padding: 1rem;
+    }
+    .course-details-box p{
+        font-size: .9rem;
+    }
+    // details
+    .enroll-bttns{
+        margin-bottom: 1rem;
+    }
+    .mylearning-txt-box h5{
+        margin-top: 1rem!important;
+    }
 }
 
 @include q.responsive(landphone) {
@@ -687,6 +911,33 @@
     }
     .ftr-links{
         margin-top: 1.5rem;
+    }
+
+    .course-details-banner-box .course-title h1{
+        font-size: 1.6rem;
+    }
+    .course-details-banner-box .course-title p{
+        width: 100%;
+    }
+
+    .ordr_1{
+        order: 1;
+    }
+    .ordr_2{
+        order: 2;
+    }
+    .course-details-box{
+        padding: 1rem;
+    }
+    .course-details-box p{
+        font-size: .9rem;
+    }
+    // details
+    .enroll-bttns{
+        margin-bottom: 1rem;
+    }
+    .mylearning-txt-box h5{
+        margin-top: 1rem!important;
     }
 }
 
@@ -796,6 +1047,14 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+    }
+
+    // details
+    .enroll-bttns{
+        margin-bottom: 1rem;
+    }
+    .mylearning-txt-box h5{
+        margin-top: 1rem!important;
     }
 }
 
