--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -2,44 +2,156 @@
 @use './util/variabls' as v;
 @use './util/media-query' as q;
 
-.header-title{
-    h2{
-        @include m.para(2rem,600,v.$dark);
+.header-title {
+    h2 {
+        @include m.para(2rem, 600, v.$dark);
         margin-bottom: 1rem;
     }
 }
 
-.card{
+.price-package-box {
     background-color: v.$light;
-    border-radius: 1rem;
-    margin-top: 2rem;
-    .card-header{
-        padding: 1rem 2rem;
+    border-radius: .9rem;
+    position: relative;
+    overflow: hidden;
+    // border: 2px solid v.$primary; 
+    padding-bottom: 4rem;
+    height: 100%;
+    .current-package {
+        position: absolute;
+        right: -35px;
+        top: 32px;
+        transform: rotate(49deg);
+
+        span {
+            display: inline-block;
+            background: v.$gdbg;
+            @include m.para(0.8rem, 500, v.$light);
+            padding: .2rem 1.2rem;
+        }
+    }
+
+    .package-title {
+        padding: 1.5rem;
+        padding-bottom: 0;
+
+        h4 {
+            @include m.para(1.6rem, 600, v.$dark);
+
+            i {
+                color: v.$secondary;
+                margin-right: 0.5rem;
+            }
+        }
+
+        p {
+            @include m.para(0.9rem, 500, v.$fourth);
+            margin-top: 0.4rem;
+        }
+    }
+
+    .package-price {
+        padding: 1.5rem;
+
+        h3 {
+            @include m.para(3rem, 400, v.$dark);
+
+            span {
+                color: v.$third;
+            }
+
+            u {
+                font-size: .9rem;
+                color: v.$fourth;
+                text-decoration: none;
+            }
+        }
+
+        a.subscribed {
+            @include m.button(1rem, v.$light, v.$fourth);
+            display: block;
+            width: 100%;
+            text-align: center;
+            border-radius: .4rem;
+            cursor: inherit
+        }
+
+        a.will-subscribe {
+            @include m.button(1rem, v.$light, v.$gdbg);
+            display: block;
+            width: 100%;
+            text-align: center;
+            border-radius: .4rem;
+
+            &:hover {
+                background: v.$blu;
+            }
+        }
+    }
+
+    .package-features {
+        padding: 1.5rem;
+        padding-top: 0.5rem;
+
+        h6 {
+            @include m.para(1.1rem, 600, v.$dark);
+        }
+
+        ul {
+            li {
+                @include m.df;
+                margin-top: 0.8rem;
+                margin-bottom: 0.2rem;
+
+                i {
+                    font-size: .9rem;
+                    color: v.$secondary;
+                    margin-right: 0.4rem;
+                }
+
+                p {
+                    @include m.para(0.9rem, 500, v.$fourth);
+                }
+            }
+        }
+    }
+
+    .package-ftr {
+        padding: 1.2rem 1.5rem;
         background-color: v.$third;
-        h3{
-            @include m.para(1.3rem,600,v.$dark);
+        border-radius: 0 0 .9rem .9rem;
+        text-align: center;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        a {
+            display: block;
+            @include m.para(1rem, 600, v.$dark);
+
+            &:hover {
+                color: v.$secondary;
+            }
         }
     }
-    .card-body{
-        h2{
-            @include m.para(2.5rem,600,v.$dark);
-        }
-        p{
-            margin-bottom: 0.5rem;
-        }
+}
+
+// price-package-box
+
+@include q.responsive(phone) {
+    .price-package-box{
+        margin-bottom: 1rem;
+        height: auto;
     }
-    .btn{
-        border-radius: 2rem;
-        background: v.$gdbg;
-        color: v.$light;
+}
+@include q.responsive(landphone) {
+    .price-package-box{
+        margin-bottom: 1rem;
+        height: auto;
     }
-    .btn-donez{
-        background: v.$fourth;
-        color: v.$light;
-        cursor: auto;
-    }
-    .card-footer{
-        padding: 1rem 2rem;
-        background-color: v.$third;
+}
+@include q.responsive(regular) {
+    .price-package-box .package-price h3{
+       font-size: 2rem;
     }
 }
