--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1,9 +1,12 @@
+.header-title {
+  margin: 1.5rem 0;
+  margin-top: 1rem;
+}
 .header-title h2 {
   font-size: 2rem;
   font-weight: 600;
   color: #000000;
   line-height: 140%;
-  margin-bottom: 1rem;
 }
 
 .price-package-box {
