--- a/scss/auth.scss
+++ b/scss/auth.scss
@@ -226,6 +226,13 @@
         }
     }
 }
+
+.password-page-wrapper{
+    width: 100%;
+    .card{
+        margin-top: 9rem;
+    }
+}
 // subscription-css @E
 
 // responsive css @S
