--- a/scss/sidebar.scss
+++ b/scss/sidebar.scss
@@ -3,7 +3,7 @@
 @use './util/media-query' as q;
 
 .sidebar-wrapper {
-    background: v.$light; 
+    background: v.$light;
     box-shadow: inset -1px 0px 0px v.$border;
     padding: 1.5rem 0;
     position: fixed;
@@ -12,7 +12,7 @@
     height: 100vh;
     width: 16.25rem;
     padding-top: 0;
-    z-index: 99; 
+    z-index: 99;
 
     .header-user-box {
         margin: 1rem 1.5rem;
@@ -22,7 +22,8 @@
 
         .media {
             align-items: center;
-            span.avatar-user{
+
+            span.avatar-user {
                 width: 2.1rem;
                 height: 2.1rem;
                 background: v.$gdbg;
@@ -35,6 +36,7 @@
                 align-items: center;
                 justify-content: center;
             }
+
             img {
                 width: 2.1rem;
                 height: 2.1rem;
@@ -62,8 +64,9 @@
         min-height: 76vh;
 
         .menubar {
+
             // position: relative;
-            .menu-item { 
+            .menu-item {
                 .menu-link {
                     @include m.df;
                     font-size: 0.9rem;
@@ -72,31 +75,38 @@
                     margin-bottom: 0.7rem;
                     position: relative;
                     transition: all linear .3s;
+
                     .fa-angles-right {
                         font-size: 0.8rem;
                         color: v.$fourth;
+                        position: absolute;
+                        right: 10px;
+                        z-index: 9;
                     }
-                   
+
                     .fa-box,
-                    .fa-file-invoice-dollar, 
+                    .fa-file-invoice-dollar,
                     .fa-users,
                     .fa-euro-sign,
-                    .fa-user{
+                    .fa-user {
                         font-size: 1.1rem;
                         color: v.$fourth;
                     }
+
                     .fa-right-lef,
-                    .fa-clock-rotate-left{
-                        font-size: .5rem!important;
+                    .fa-clock-rotate-left {
+                        font-size: .5rem !important;
                         color: v.$fourth;
                         margin-right: 0.4rem;
                     }
-                    .fa-user-group{
+
+                    .fa-user-group {
                         font-size: 1rem;
                         color: v.$fourth;
                     }
+
                     i.fa-superpowers,
-                    i.fa-plug{
+                    i.fa-plug {
                         color: v.$fourth;
                         font-size: 1.6rem;
                     }
@@ -109,7 +119,7 @@
                         span.sub-menu-box {
                             display: block;
                             margin-left: 0;
-                        } 
+                        }
                     }
 
                     &::before {
@@ -134,7 +144,7 @@
                         -webkit-text-fill-color: transparent;
                         background-clip: text;
                         text-shadow: v.$bxs;
-                        
+
                         img {
                             filter: invert(65%) sepia(82%) saturate(5223%) hue-rotate(194deg) brightness(102%) contrast(99%);
                         }
@@ -147,8 +157,9 @@
                         padding: .3rem 0;
                         color: v.$fourth !important;
                         font-size: 0.9rem !important;
-                        margin-left: 1rem; 
+                        margin-left: 1rem;
                         font-weight: 400;
+
                         img {
                             width: 1rem;
                         }
@@ -192,6 +203,7 @@
     .header-user-box {
         .media {
             justify-content: center;
+
             span,
             img {
                 margin-right: 0;
@@ -210,10 +222,12 @@
             .menu-item {
                 .menu-link {
                     justify-content: center;
+
                     .fa-angles-right {
                         font-size: .75rem;
                         margin-left: 0.5rem;
                     }
+
                     span {
                         display: none;
                         width: 0;
@@ -251,10 +265,11 @@
     display: none;
     padding-top: .3rem;
 }
+
 .sidebar-nav-area {
     .menubar {
         .menu-item:hover {
-            .pages-submenu-wrap{
+            .pages-submenu-wrap {
                 display: block;
             }
         }
@@ -266,15 +281,16 @@
         padding-left: 7.5rem;
         transition: all linear .2s;
     }
-    .pages-submenu-wrap { 
-        left: 6rem!important;
-        top: -5.6rem!important;
+
+    .pages-submenu-wrap {
+        left: 6rem !important;
+        top: -5.6rem !important;
         transition: all linear .2s;
     }
 }
 
 .pages-submenu-wrap li a {
-    @include m.para(0.9rem,400,v.$fourth);
+    @include m.para(0.9rem, 400, v.$fourth);
     transition: all linear .2s;
     position: relative;
     padding: 10px 20px;
@@ -305,34 +321,37 @@
     filter: invert(65%) sepia(82%) saturate(5223%) hue-rotate(194deg) brightness(102%) contrast(99%);
 }
 
-.lock-icons{
-    i.fa-lock{
+.lock-icons {
+    i.fa-lock {
         font-size: .8rem;
     }
 }
 
 /* pages inner submenu end */
 
-.e-camp-submenu { 
+.e-camp-submenu {
     li {
         a {
             span {
                 margin-left: 0.8rem;
             }
-            i{
+
+            i {
                 font-size: .85rem;
                 color: v.$fourth;
                 margin-left: 1rem;
-            } 
+            }
 
             img {
                 margin-right: 0;
             }
         }
     }
-    li.sub-sidebar-submenu{
+
+    li.sub-sidebar-submenu {
         position: relative;
-        ul{
+
+        ul {
             position: absolute;
             left: 100%;
             background: v.$light;
@@ -348,9 +367,11 @@
 .e-camp-submenu li.sub-sidebar-submenu:hover ul {
     display: block;
 }
-.lock-icons{ 
-    justify-content: flex-start!important;
-    i{
+
+.lock-icons {
+    justify-content: flex-start !important;
+
+    i {
         font-size: .7rem;
         margin-left: 1rem;
         color: v.$fourth;
@@ -359,19 +380,22 @@
 
 
 // responsive css start
-@include q.responsive(phone) { 
-    .main-body-wrapper .sidebar-wrapper{
-        width: 0%!important;
+@include q.responsive(phone) {
+    .main-body-wrapper .sidebar-wrapper {
+        width: 0% !important;
         display: none;
-    } 
-    .main-body-wrapper{
+    }
+
+    .main-body-wrapper {
         min-height: 100vh;
     }
+
     .main-body-wrapper .sidebar-wrapper.sidebar-custom-width {
         width: 100% !important;
-        height: 100% !important; 
-        display: block!important; 
+        height: 100% !important;
+        display: block !important;
         top: 6rem;
+
         .header-user-box {
             .media {
                 justify-content: center;
@@ -402,39 +426,45 @@
                         }
 
                         &::before {
-                            left: 0!important;
+                            left: 0 !important;
                         }
                     }
                 }
             }
-        } 
-    } 
+        }
+    }
+
     .main-page-width .pages-submenu-wrap {
         left: 40% !important;
         top: -5.6rem !important;
         transition: all linear 0.2s;
-        width: 60%; 
-        z-index: 9999;   
+        width: 60%;
+        z-index: 9999;
     }
+
     .e-camp-submenu li.sub-sidebar-submenu ul {
         left: -65%;
         top: 0;
         z-index: 999;
     }
 }
+
 @include q.responsive(landphone) {
-    .main-body-wrapper .sidebar-wrapper{
-        width: 0%!important;
+    .main-body-wrapper .sidebar-wrapper {
+        width: 0% !important;
         display: none;
     }
-    .main-body-wrapper{
+
+    .main-body-wrapper {
         min-height: 100vh;
-    }  
+    }
+
     .main-body-wrapper .sidebar-wrapper.sidebar-custom-width {
         width: 60% !important;
-        height: 100% !important; 
-        display: block!important; 
+        height: 100% !important;
+        display: block !important;
         top: 7rem;
+
         .header-user-box {
             .media {
                 justify-content: center;
@@ -465,18 +495,20 @@
                         }
 
                         &::before {
-                            left: 0!important;
+                            left: 0 !important;
                         }
                     }
                 }
             }
-        } 
-    } 
+        }
+    }
+
     .main-page-width .pages-submenu-wrap {
         left: 40% !important;
-        top: 6.4rem !important; 
-        width: 60%;   
+        top: 6.4rem !important;
+        width: 60%;
     }
+
     .e-camp-submenu li.sub-sidebar-submenu ul {
         left: -65%;
         top: 0;
@@ -484,19 +516,23 @@
         width: 70%;
     }
 }
+
 @include q.responsive(tablet) {
-    .main-body-wrapper .sidebar-wrapper{
-        width: 0%!important;
+    .main-body-wrapper .sidebar-wrapper {
+        width: 0% !important;
         display: none;
     }
-    .main-body-wrapper{
+
+    .main-body-wrapper {
         min-height: 100vh;
-    }  
+    }
+
     .main-body-wrapper .sidebar-wrapper.sidebar-custom-width {
         width: 40% !important;
-        height: 100% !important; 
-        display: block!important; 
+        height: 100% !important;
+        display: block !important;
         top: 7rem;
+
         .header-user-box {
             .media {
                 justify-content: center;
@@ -527,13 +563,14 @@
                         }
 
                         &::before {
-                            left: 0!important;
+                            left: 0 !important;
                         }
                     }
                 }
             }
-        } 
-    } 
+        }
+    }
+
     .main-page-width .pages-submenu-wrap {
         left: 74% !important;
         top: -5rem !important;
@@ -545,14 +582,15 @@
     .sidebar-wrapper {
         width: 6rem;
         transition: all linear .2s;
+
         .header-user-box {
             .media {
                 justify-content: center;
-    
+
                 img {
                     margin-right: 0;
                 }
-    
+
                 .media-body {
                     width: 0;
                     height: 0;
@@ -560,23 +598,25 @@
                 }
             }
         }
-    
+
         .sidebar-nav-area {
             .menubar {
                 .menu-item {
                     .menu-link {
                         justify-content: center;
+
                         .fa-angles-right {
                             font-size: .75rem;
                             margin-left: 0.5rem;
                         }
+
                         span {
                             display: none;
                             width: 0;
                             height: 0;
                             margin-left: 0;
                         }
-    
+
                         &::before {
                             left: inherit;
                             right: 0;
@@ -585,13 +625,15 @@
                 }
             }
         }
-    
+
         .submenu-itm a {
             margin-left: 0 !important;
         }
     }
+
     .main-body-wrapper .sidebar-wrapper.sidebar-custom-width {
-        width: 19rem !important; 
+        width: 19rem !important;
+
         .header-user-box {
             .media {
                 justify-content: center;
@@ -622,16 +664,16 @@
                         }
 
                         &::before {
-                            left: 0!important;
+                            left: 0 !important;
                         }
                     }
                 }
             }
-        } 
-    } 
-    
-    .pages-submenu-wrap{
-        left: 6rem!important; 
-        top: -5.6rem!important; 
+        }
+    }
+
+    .pages-submenu-wrap {
+        left: 6rem !important;
+        top: -5.6rem !important;
     }
 }
