--- a/scss/util/_variabls.scss
+++ b/scss/util/_variabls.scss
@@ -9,6 +9,7 @@ $fourth: #8C8FAE;
 $orang: #2d3958; 
 $gdbg: linear-gradient(132deg,$primary 20%,$secondary);  
 $bxs: 3px 22px 50px -2px $third;
+$bxs2: 2px 9px 7px -1px $third;
 $mbxs: inset 0px -1px 0px $border;
 $pm-y: 4rem 0;
 $pm-b: 2rem;
