--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -549,7 +549,7 @@
                 .form-control {
                     width: 80%;
                     display: block;
-                    box-shadow: v.$bxs2;
+                    box-shadow: 2px 2px 10px #f0eded;
                 }
             }
 
