--- a/public/assets/css/product-researchs.css
+++ b/public/assets/css/product-researchs.css
@@ -180,7 +180,7 @@
 .create-form-wrap {
   padding: 1rem 1.5rem;
   background: #ffffff;
-  border-radius: 5px;
+  border-radius: 8px;
   position: relative;
 }
 
@@ -188,15 +188,16 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #dfe5f1;
   margin-bottom: 0.8rem;
   padding-bottom: 0.8rem;
+  margin-top: 1rem;
 }
 .create-form-head h6 {
-  font-size: 1.2rem;
+  font-size: 1.8rem;
   font-weight: 500;
   color: #4c60ff;
   line-height: 140%;
+  text-transform: capitalize;
 }
 .create-form-head a {
   font-size: 1rem;
@@ -224,21 +225,33 @@
 
 .create-form-box .form-group {
   position: relative;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 .create-form-box .form-group label {
-  font-size: 0.9rem;
-  font-weight: 600;
-  color: #8C8FAE;
+  font-size: 1.25rem;
+  font-weight: 400;
+  color: #1d1e27;
   line-height: 140%;
-  text-transform: uppercase;
-  margin-bottom: 12px;
+  text-transform: capitalize;
+  margin-bottom: 14px;
 }
+.create-form-box .form-group select,
 .create-form-box .form-group .form-control {
   font-size: 1rem;
   font-weight: 400;
   color: #000000;
   line-height: 140%;
+  border-radius: 8px;
+  box-shadow: 2px 2px 10px #f0eded;
+}
+.create-form-box .form-group select,
+.create-form-box .form-group input.form-control[type=number],
+.create-form-box .form-group input.form-control[type=url],
+.create-form-box .form-group input.form-control[type=text] {
+  height: 3rem;
+}
+.create-form-box .form-group .form-control:focus-within {
+  border: 1px solid #636571;
 }
 .create-form-box .form-group .invalid-feedback {
   display: block;
@@ -255,7 +268,7 @@
 .create-form-box .form-group #url_increment {
   position: absolute;
   right: 1rem;
-  top: 2.5rem;
+  top: 0.9rem;
   color: #ffffff;
   width: 1.5rem;
   height: 1.5rem;
